KStringHandler: Don't insert ZWSP between camelCase sub-words if string has whitespaces

Fixes application names like "GNU TeXmacs" which could have
inappropriately wrap in the middle of a stylized word.

Amends 98f5abc533c95e815742de4fe532b2920c5f6982

BUG: 444691